--- a/Implementacion/proySC/public/.htaccess
+++ b/Implementacion/proySC/public/.htaccess
@@ -1,4 +1,5 @@
 RewriteEngine On
+#RewriteBase /proy-sc/
 # The following rule tells Apache that if the requested filename
 # exists, simply serve it.
 RewriteCond %{REQUEST_FILENAME} -s [OR]
