--- a/Implementacion/proySC/composer.json
+++ b/Implementacion/proySC/composer.json
@@ -9,6 +9,8 @@
     "homepage": "http://framework.zend.com/",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zendframework": ">2.1.3"
+        "zendframework/zendframework": ">2.1.3",
+        "doctrine/common":">=2.1",
+        "doctrine/doctrine-orm-module": "0.*"
     }
 }
